NewRules/antlr/PLSRulesV2Parser.py
# Generated from .//PLSRulesV2.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PLSRulesV2Parser ( Parser ):

    grammarFileName = "PLSRulesV2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "'FUNKCJA'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'ROWNE'", "'ROZNE'", "'TO'", "'>'", "'<'", "'<='", 
                     "'>='", "'LUB'", "'I'", "'NIE'", "'POKI'", "'PETLA'", 
                     "'JESLI'", "'LUB_JESLI'", "'INACZEJ'", "'ZWROC'", "'PRAWDA'", 
                     "'FALSZ'", "'OD'", "'ZABIERZ'", "':'", "<INVALID>", 
                     "'SKONCZ'", "'DALEJ'", "'PLUSIK'", "';'", "<INVALID>", 
                     "'LICZBA'", "'TEKST'", "'BOOL'", "','", "'DO'", "'WYPISZ'", 
                     "'KONIEC'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "MINUS", "MNOZENIE", "DZIELENIE", 
                      "KOMENTARZ", "FUNKCJA", "LNAWIAS_OKRAGLY", "PNAWIAS_OKRAGLY", 
                      "LNAWIAS_KLAMROWY", "PNAWIAS_KLAMROWY", "LNAWIAS_KWADRATOWY", 
                      "PNAWIAS_KWADRATOWY", "ROWNE", "ROZNE", "PODSTAW", 
                      "WIEKSZE", "MNIEJSZE", "MNIEJSZE_ROWNE", "WIEKSZE_ROWNE", 
                      "ALTERNATYWA", "KONIUNKCJA", "NEGACJA", "WHILE", "FOR", 
                      "IF", "ELIF", "ELSE", "RETURN", "PRAWDA", "FALSZ", 
                      "OD", "IMPORT", "DWUKROPEK", "NAPIS", "PRZERWIJ", 
                      "KONTYNUUJ", "ZWIEKSZ", "KONIEC_LINII", "SPACJA", 
                      "INT", "STRING", "BOOL", "PRZECINEK", "DO", "PRINT", 
                      "KONIEC", "NUMERYCZNY", "ID" ]

    RULE_program = 0
    RULE_kod = 1
    RULE_wyrazenie = 2
    RULE_instrukcja = 3
    RULE_instrukcjaZlozona = 4
    RULE_deklaracjaFunkcji = 5
    RULE_parametry = 6
    RULE_deklaracjaWartosci = 7
    RULE_przypisanieWartosci = 8
    RULE_wyrazeniePodstawowe = 9
    RULE_wyrazenieString = 10
    RULE_wyrazenieBool = 11
    RULE_wyrazenieArytmetyczne = 12
    RULE_wywolanieFunkcji = 13
    RULE_listaWartosci = 14
    RULE_wartosc = 15
    RULE_typWartosci = 16
    RULE_ifInstrukcja = 17
    RULE_whileInstrukcja = 18
    RULE_forInstrukcja = 19
    RULE_printInstrukcja = 20

    ruleNames =  [ "program", "kod", "wyrazenie", "instrukcja", "instrukcjaZlozona", 
                   "deklaracjaFunkcji", "parametry", "deklaracjaWartosci", 
                   "przypisanieWartosci", "wyrazeniePodstawowe", "wyrazenieString", 
                   "wyrazenieBool", "wyrazenieArytmetyczne", "wywolanieFunkcji", 
                   "listaWartosci", "wartosc", "typWartosci", "ifInstrukcja", 
                   "whileInstrukcja", "forInstrukcja", "printInstrukcja" ]

    EOF = Token.EOF
    PLUS=1
    MINUS=2
    MNOZENIE=3
    DZIELENIE=4
    KOMENTARZ=5
    FUNKCJA=6
    LNAWIAS_OKRAGLY=7
    PNAWIAS_OKRAGLY=8
    LNAWIAS_KLAMROWY=9
    PNAWIAS_KLAMROWY=10
    LNAWIAS_KWADRATOWY=11
    PNAWIAS_KWADRATOWY=12
    ROWNE=13
    ROZNE=14
    PODSTAW=15
    WIEKSZE=16
    MNIEJSZE=17
    MNIEJSZE_ROWNE=18
    WIEKSZE_ROWNE=19
    ALTERNATYWA=20
    KONIUNKCJA=21
    NEGACJA=22
    WHILE=23
    FOR=24
    IF=25
    ELIF=26
    ELSE=27
    RETURN=28
    PRAWDA=29
    FALSZ=30
    OD=31
    IMPORT=32
    DWUKROPEK=33
    NAPIS=34
    PRZERWIJ=35
    KONTYNUUJ=36
    ZWIEKSZ=37
    KONIEC_LINII=38
    SPACJA=39
    INT=40
    STRING=41
    BOOL=42
    PRZECINEK=43
    DO=44
    PRINT=45
    KONIEC=46
    NUMERYCZNY=47
    ID=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PLSRulesV2Parser.EOF, 0)

        def kod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSRulesV2Parser.KodContext)
            else:
                return self.getTypedRuleContext(PLSRulesV2Parser.KodContext,i)


        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PLSRulesV2Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 324355988914240) != 0):
                self.state = 42
                self.kod()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(PLSRulesV2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def wyrazenie(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.WyrazenieContext,0)


        def KONIEC_LINII(self):
            return self.getToken(PLSRulesV2Parser.KONIEC_LINII, 0)

        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_kod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKod" ):
                return visitor.visitKod(self)
            else:
                return visitor.visitChildren(self)




    def kod(self):

        localctx = PLSRulesV2Parser.KodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_kod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.wyrazenie()
            self.state = 51
            self.match(PLSRulesV2Parser.KONIEC_LINII)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WyrazenieContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrukcja(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.InstrukcjaContext,0)


        def deklaracjaFunkcji(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.DeklaracjaFunkcjiContext,0)


        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_wyrazenie

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWyrazenie" ):
                return visitor.visitWyrazenie(self)
            else:
                return visitor.visitChildren(self)




    def wyrazenie(self):

        localctx = PLSRulesV2Parser.WyrazenieContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_wyrazenie)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23, 24, 25, 40, 41, 42, 45, 48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.instrukcja()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.deklaracjaFunkcji()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrukcjaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def deklaracjaWartosci(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.DeklaracjaWartosciContext,0)


        def przypisanieWartosci(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.PrzypisanieWartosciContext,0)


        def instrukcjaZlozona(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.InstrukcjaZlozonaContext,0)


        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_instrukcja

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrukcja" ):
                return visitor.visitInstrukcja(self)
            else:
                return visitor.visitChildren(self)




    def instrukcja(self):

        localctx = PLSRulesV2Parser.InstrukcjaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instrukcja)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40, 41, 42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.deklaracjaWartosci()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.przypisanieWartosci()
                pass
            elif token in [23, 24, 25, 45]:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.instrukcjaZlozona()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrukcjaZlozonaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifInstrukcja(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.IfInstrukcjaContext,0)


        def whileInstrukcja(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.WhileInstrukcjaContext,0)


        def forInstrukcja(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.ForInstrukcjaContext,0)


        def printInstrukcja(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.PrintInstrukcjaContext,0)


        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_instrukcjaZlozona

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrukcjaZlozona" ):
                return visitor.visitInstrukcjaZlozona(self)
            else:
                return visitor.visitChildren(self)




    def instrukcjaZlozona(self):

        localctx = PLSRulesV2Parser.InstrukcjaZlozonaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instrukcjaZlozona)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.ifInstrukcja()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.whileInstrukcja()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.forInstrukcja()
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.printInstrukcja()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeklaracjaFunkcjiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNKCJA(self):
            return self.getToken(PLSRulesV2Parser.FUNKCJA, 0)

        def ID(self):
            return self.getToken(PLSRulesV2Parser.ID, 0)

        def LNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesV2Parser.LNAWIAS_OKRAGLY, 0)

        def PNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesV2Parser.PNAWIAS_OKRAGLY, 0)

        def LNAWIAS_KLAMROWY(self):
            return self.getToken(PLSRulesV2Parser.LNAWIAS_KLAMROWY, 0)

        def PNAWIAS_KLAMROWY(self):
            return self.getToken(PLSRulesV2Parser.PNAWIAS_KLAMROWY, 0)

        def parametry(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.ParametryContext,0)


        def instrukcja(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSRulesV2Parser.InstrukcjaContext)
            else:
                return self.getTypedRuleContext(PLSRulesV2Parser.InstrukcjaContext,i)


        def RETURN(self):
            return self.getToken(PLSRulesV2Parser.RETURN, 0)

        def wyrazenie(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.WyrazenieContext,0)


        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_deklaracjaFunkcji

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeklaracjaFunkcji" ):
                return visitor.visitDeklaracjaFunkcji(self)
            else:
                return visitor.visitChildren(self)




    def deklaracjaFunkcji(self):

        localctx = PLSRulesV2Parser.DeklaracjaFunkcjiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deklaracjaFunkcji)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(PLSRulesV2Parser.FUNKCJA)
            self.state = 69
            self.match(PLSRulesV2Parser.ID)
            self.state = 70
            self.match(PLSRulesV2Parser.LNAWIAS_OKRAGLY)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 7696581394432) != 0):
                self.state = 71
                self.parametry()


            self.state = 74
            self.match(PLSRulesV2Parser.PNAWIAS_OKRAGLY)
            self.state = 75
            self.match(PLSRulesV2Parser.LNAWIAS_KLAMROWY)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 324355988914176) != 0):
                self.state = 76
                self.instrukcja()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 82
                self.match(PLSRulesV2Parser.RETURN)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 324355988914240) != 0):
                    self.state = 83
                    self.wyrazenie()




            self.state = 88
            self.match(PLSRulesV2Parser.PNAWIAS_KLAMROWY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typWartosci(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSRulesV2Parser.TypWartosciContext)
            else:
                return self.getTypedRuleContext(PLSRulesV2Parser.TypWartosciContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PLSRulesV2Parser.ID)
            else:
                return self.getToken(PLSRulesV2Parser.ID, i)

        def PRZECINEK(self, i:int=None):
            if i is None:
                return self.getTokens(PLSRulesV2Parser.PRZECINEK)
            else:
                return self.getToken(PLSRulesV2Parser.PRZECINEK, i)

        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_parametry

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametry" ):
                return visitor.visitParametry(self)
            else:
                return visitor.visitChildren(self)




    def parametry(self):

        localctx = PLSRulesV2Parser.ParametryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parametry)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.typWartosci()
            self.state = 91
            self.match(PLSRulesV2Parser.ID)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 92
                self.match(PLSRulesV2Parser.PRZECINEK)
                self.state = 93
                self.typWartosci()
                self.state = 94
                self.match(PLSRulesV2Parser.ID)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeklaracjaWartosciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typWartosci(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.TypWartosciContext,0)


        def ID(self):
            return self.getToken(PLSRulesV2Parser.ID, 0)

        def PODSTAW(self):
            return self.getToken(PLSRulesV2Parser.PODSTAW, 0)

        def wyrazeniePodstawowe(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.WyrazeniePodstawoweContext,0)


        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_deklaracjaWartosci

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeklaracjaWartosci" ):
                return visitor.visitDeklaracjaWartosci(self)
            else:
                return visitor.visitChildren(self)




    def deklaracjaWartosci(self):

        localctx = PLSRulesV2Parser.DeklaracjaWartosciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_deklaracjaWartosci)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.typWartosci()
            self.state = 102
            self.match(PLSRulesV2Parser.ID)
            self.state = 103
            self.match(PLSRulesV2Parser.PODSTAW)
            self.state = 104
            self.wyrazeniePodstawowe()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrzypisanieWartosciContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PLSRulesV2Parser.ID, 0)

        def PODSTAW(self):
            return self.getToken(PLSRulesV2Parser.PODSTAW, 0)

        def wartosc(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.WartoscContext,0)


        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_przypisanieWartosci

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrzypisanieWartosci" ):
                return visitor.visitPrzypisanieWartosci(self)
            else:
                return visitor.visitChildren(self)




    def przypisanieWartosci(self):

        localctx = PLSRulesV2Parser.PrzypisanieWartosciContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_przypisanieWartosci)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PLSRulesV2Parser.ID)
            self.state = 107
            self.match(PLSRulesV2Parser.PODSTAW)
            self.state = 108
            self.wartosc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WyrazeniePodstawoweContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERYCZNY(self):
            return self.getToken(PLSRulesV2Parser.NUMERYCZNY, 0)

        def ID(self):
            return self.getToken(PLSRulesV2Parser.ID, 0)

        def NAPIS(self):
            return self.getToken(PLSRulesV2Parser.NAPIS, 0)

        def PRAWDA(self):
            return self.getToken(PLSRulesV2Parser.PRAWDA, 0)

        def FALSZ(self):
            return self.getToken(PLSRulesV2Parser.FALSZ, 0)

        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_wyrazeniePodstawowe

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWyrazeniePodstawowe" ):
                return visitor.visitWyrazeniePodstawowe(self)
            else:
                return visitor.visitChildren(self)




    def wyrazeniePodstawowe(self):

        localctx = PLSRulesV2Parser.WyrazeniePodstawoweContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_wyrazeniePodstawowe)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 422231255547904) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WyrazenieStringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAPIS(self):
            return self.getToken(PLSRulesV2Parser.NAPIS, 0)

        def ID(self):
            return self.getToken(PLSRulesV2Parser.ID, 0)

        def LNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesV2Parser.LNAWIAS_OKRAGLY, 0)

        def wyrazenieString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSRulesV2Parser.WyrazenieStringContext)
            else:
                return self.getTypedRuleContext(PLSRulesV2Parser.WyrazenieStringContext,i)


        def PNAWIAS_OKRAGLY(self):
            return self.getToken(PLSRulesV2Parser.PNAWIAS_OKRAGLY, 0)

        def wywolanieFunkcji(self):
            return self.getTypedRuleContext(PLSRulesV2Parser.WywolanieFunkcjiContext,0)


        def ZWIEKSZ(self):
            return self.getToken(PLSRulesV2Parser.ZWIEKSZ, 0)

        def getRuleIndex(self):
            return PLSRulesV2Parser.RULE_wyrazenieString

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWyrazenieString" ):
                return visitor.visitWyrazenieString(self)
            else:
                return visitor.visitChildren(self)



    def wyrazenieString(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PLSRulesV2Parser.WyrazenieStringContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_wyrazenieString, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 113
                self.match(PLSRulesV2Parser.NAPIS)
                pass

            elif la_ == 2:
                self.state = 114
                self.match(PLSRulesV2Parser.ID)
                pass

            elif la_ == 3:
                self.state = 115
                self.match(PLSRulesV2Parser.LNAWIAS_OKRAGLY)
                self.state = 116
                self.wyrazenieString(0)
                self.state = 117
                self.match(PLSRulesV2Parser.PNAWIAS_OKRAGLY)
                pass

            elif la_ == 4:
                self.state = 119
                self.wywolanieFunkcji()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = PLSRulesV2Parser.WyrazenieStringContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_wyrazenieString)
                    self.state = 122
                    if not self.precpred(self._ctx, 5):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                    self.state = 123
                    self.match(PLSRulesV2Parser.ZWIEKSZ)
                    self.state = 124
                    self.wyrazenieString(6) 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class WyrazenieBoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def wyrazenieString(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PLSRulesV2Parser.WyrazenieStringContext)
            else:
                return self.getTypedRuleContext(PLSRulesV2Parser.WyrazenieStringContext,i)

